added image to show content-typing works out of the box

--- a/assets/index.html
+++ b/assets/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Hiya!</h1>
     <p>You might not know this, but this HTML file is actually called 'index.html'! You don't see it in the URL bar above right? That's because I'm extremely aweomse! 😏</p>
+    <p>Here is a picture of mine. I really like it! 😊</p>
+    <img src="assets/avatar.jpg" alt="Profile picture Jonah Meijers">
 </body>
 </html>
