made 404 message friendlier for people that are not tech savvy

--- a/404.html
+++ b/404.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>PAGE NOT FOUND!</h1>
-    <h2>Sawreh 😞</h2>
+    <h2>The page you try to reach isn't available at this moment. I'm sorry for the inconvenience. 😞</h2>
 </body>
 </html>
